<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:background="@color/background">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headline"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/headline_margin_bottom"
        style="@style/Headline" />

    <Button
        android:onClick="onButtonClick"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:text="@string/app1_label"
        android:id="@+id/button1"
        android:layout_below="@id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:onClick="onButton2Click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:text="@string/app2_label"
        android:id="@+id/button2"
        android:layout_below="@id/button1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@id/button1"
        android:layout_alignRight="@id/button1" />

    <Button
        android:onClick="onButton3Click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:text="@string/app3_label"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@id/button1"
        android:layout_alignEnd="@id/button1" />

    <Button
        android:onClick="onButton4Click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:text="@string/app4_label"
        android:id="@+id/button4"
        android:layout_below="@id/button3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@id/button1"
        android:layout_alignEnd="@id/button1" />

    <Button
        android:onClick="onButton5Click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:text="@string/app5_label"
        android:id="@+id/button5"
        android:layout_below="@id/button4"
        android:layout_alignRight="@id/button1"
        android:layout_alignEnd="@id/button1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:onClick="onButton6Click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app6_label"
        android:id="@+id/button6"
        android:layout_below="@id/button5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@id/button1"
        android:layout_alignEnd="@id/button1" />

</RelativeLayout>
</ScrollView>
</RelativeLayout>
